# CodeLens

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CodeLens-白皮书.md  README.md  TODO.md  code-lens  code-lens.ps1  pnpm-lock.yaml  pnpm-workspace.yaml  start.sh
backend/: alembic.ini  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 0001_review_mvp.py  0002_review_repository_identity.py  0003_review_execution_inputs.py  0004_review_checkpoint_validation_attempts.py  0005_review_workspace_soft_delete.py  0006_review_prompt_locale.py
backend/scripts/: run_fake_server.py  run_live_smoke.py
backend/src/codelens/bootstrap/: cli.py  logging.py  settings.py
backend/src/codelens/testing/: __init__.py  correctness_fixture.py
backend/src/codelens/worker/: __init__.py  execution.py  main.py  scheduler.py  singleton.py
backend/tests/: conftest.py
backend/tests/contract/http/: test_health.py  test_logging_settings_api.py  test_model_gateways_api.py  test_provider_settings_api.py  test_repository_catalog_api.py  test_reviews_api.py
backend/tests/contract/review/: test_openai_runtime.py
backend/tests/evals/: test_correctness_fixture.py
backend/tests/fixtures/: git_repository.py
backend/tests/integration/review/: test_sqlite_store.py
backend/tests/integration/worker/: test_concurrent_tasks.py  test_restart_recovery.py  test_singleton.py
backend/tests/integration/workspace/: test_git_ignore.py  test_repository_inspection.py  test_review_worktrees.py  test_scope_planner.py  test_snapshot_creation.py
backend/tests/unit/: test_package.py
(+171 files in other folders)
